# Trust_Signal_AI

./: .env.example  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  UI_Decisions.md  config.py  docker-compose.yml  logging_setup.py  pyproject.toml  requirements-dev.txt  requirements.txt
airflow/dags/: repo_scoring_dag.py  resume_scoring_dag.py  retraining_dag.py
airflow/sensors/: kafka_lag_sensor.py
api/: auth.py  candidates.py  main.py  metrics.py  rate_limiter.py  webhooks.py
dashboard/: api_client.py  app.py  pdf_export.py
dashboard/legacy/: README.md  app.py
docs/: DPA_TEMPLATE.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: demo.spec.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: AlertPanel.tsx  Eyebrow.tsx  KpiRow.tsx  Sidebar.tsx  SignalBreakdownChart.tsx  TopBar.tsx  TranscriptView.tsx  TrustScoreGauge.tsx
frontend/src/hooks/: usePolling.ts
frontend/src/pages/: AnalyticsPage.tsx  CandidatesPage.tsx  (+4 more)
ingestion/: commit_analyzer.py  consumer.py  github_crawler.py  producer.py  profile_producer.py  repo_producer.py  resume_parser.py  resume_producer.py  text_publisher.py
ml/: cross_correlation.py  prescreening_score.py  repo_score.py  resume_score.py  trust_score.py
ml/embeddings/: similarity.py
ml/features/: audio_bg.py  burstiness.py  code_perplexity.py  code_style.py  commit_pattern.py  latency.py  perplexity.py  resume_burstiness.py  resume_perplexity.py  section_uniformity.py  vocab_richness.py
research/model_cards/: repo_detector.md  resume_detector.md
scripts/: pii_audit.py  query_delta.py  smoke_test.sh
storage/: candidate_store.py  delta_writer.py  lifecycle.py  object_store.py  prescreening_store.py  repo_store.py
tests/: conftest.py
tests/integration/: test_api.py  test_candidate_api.py  test_dag_dry_run.py  test_delta_pipeline.py  test_full_prescreening.py  test_ingestion.py  test_lifecycle.py  test_load.py  test_repo_ingestion.py  test_stt_pipeline.py  test_webhooks.py
tests/unit/: test_audio_bg.py  test_burstiness.py  test_code_perplexity.py  test_code_style.py  test_commit_analyzer.py  test_commit_pattern.py  test_consumer.py  test_cross_correlation.py  test_dashboard.py  test_delta_writer.py  test_github_crawler.py  test_latency.py  test_lifecycle_resume.py  test_perplexity.py  test_prescreening_score.py  test_producer.py  test_rate_limiter.py  test_repo_score.py  test_resume_parser.py  test_resume_score.py  test_resume_upload.py  test_retraining_dag.py  test_section_uniformity.py  test_similarity.py  test_vocab_richness.py  test_whisper_service.py
transcription/: whisper_service.py
(+7 files in other folders)
