[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "trustsignal"
version = "0.1.0"
description = "AI-powered interview authenticity scoring platform"
requires-python = ">=3.11"
readme = "README.md"

# ── Ruff (linter) ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "S",   # bandit security
    "B",   # flake8-bugbear
]
ignore = [
    "S101",  # assert allowed in tests
    "S105",  # possible hardcoded password (triggers on placeholder defaults)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

# ── Black (formatter) ─────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short"
